# downsyndrome

./: .gitignore  README.md  app.py  pyproject.toml
src/: __init__.py  config.py  data.py  evaluate.py  gradcam.py  model.py  train.py
