[project]
name = "down-syndrome-cnn"
version = "0.1.0"
description = "Binary classification of facial images for Down Syndrome detection using CNNs with TensorFlow/Keras."
readme = "README.md"
requires-python = ">=3.10,<3.13"   
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["deep-learning", "cnn", "medical-imaging", "down-syndrome", "tensorflow"]

# ---------------------------------------------------------------------------
# Core dependencies
# ---------------------------------------------------------------------------
dependencies = [
    "tensorflow>=2.15,<2.19",
    "numpy>=1.24,<2.0",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",           # needed for Grad-CAM visualisation
    "streamlit>=1.38",              # web UI for inference
    "Pillow>=10.0",                 # image handling for uploads
    "tensorboard>=2.15",            # training visualisation dashboard
]

# ---------------------------------------------------------------------------
# Optional dependency groups (install with: uv pip install -e ".[dev]")
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "ruff>=0.4",                    # linting & formatting
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",              # Jupyter kernel support
]
notebook = [
    "jupyterlab>=4.1",
    "ipywidgets>=8.1",
]

# ---------------------------------------------------------------------------
# Entry point (optional — uncomment if you add a CLI later)
# ---------------------------------------------------------------------------
# [project.scripts]
# ds-train = "down_syndrome_cnn.train:main"

# ---------------------------------------------------------------------------
# Build system — not needed for a research/training project.
# Uncomment only if you want to package & publish this as a library.
# ---------------------------------------------------------------------------
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Tool configs
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]                   # we handle line-length via line-length above

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
